Changement de la langue de l'attribut HTML en français dans master.html

--- a/src/master.html
+++ b/src/master.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vos Favoris</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
-
-
     <!-- fichiers js -->
     <script src="./js/bgMenu.js"></script>
     <script src="./js/navBarre.js"></script>
     <script src="./js/search.js"></script>
-
     <script src="./js/mastersSearch.js"></script>
-
-
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./js/filtresRecherche.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
     <script type="module" src="./js/mainEcharts.js"></script>
 </head>
